--- a/webeasy/package.json
+++ b/webeasy/package.json
@@ -21,22 +21,24 @@
   "author": "Claudio Traspadini Oliveira",
   "license": "ISC",
   "dependencies": {
-    "@types/handlebars": "^4.0.36",
     "async": "^2.6.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
     "debug": "^3.1.0",
     "errorhandler": "^1.5.0",
+    "formidable": "^1.1.1",
     "handlebars": "^4.0.11",
     "lodash": "^4.17.4",
     "request": "^2.83.0"
   },
   "devDependencies": {
+    "@types/handlebars": "^4.0.36",
     "@types/async": "^2.0.45",
     "@types/bcrypt-nodejs": "0.0.30",
     "@types/bluebird": "^3.5.18",
     "@types/debug": "0.0.30",
     "@types/errorhandler": "0.0.32",
+    "@types/formidable": "^1.0.30",
     "@types/jest": "^21.1.8",
     "@types/lodash": "^4.14.91",
     "@types/node": "^9.4.1",
