--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,10 @@
             "console": "internalConsole",
             "cwd": "${workspaceRoot}",
             "program": "${workspaceRoot}/example-webeasy/src/index.ts",
-            "outFiles": ["${workspaceRoot}/example-webeasy/dist/*.js"]
+            "outFiles": ["${workspaceRoot}/example-webeasy/dist/*.js"],
+            "env": {
+                "DEBUG":"*"
+            }
         },
         {
             "type": "node",
