Added filter feature

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,8 @@
             "program": "${workspaceRoot}/example-webeasy/src/index.ts",
             "outFiles": ["${workspaceRoot}/example-webeasy/dist/*.js"],
             "env": {
-                "DEBUG":"*"
+                "DEBUG":"*",
+                "DEBUG_COLORS":"true"
             }
         },
         {
