--- a/webeasy/package.json
+++ b/webeasy/package.json
@@ -29,7 +29,8 @@
     "formidable": "^1.1.1",
     "handlebars": "^4.0.11",
     "lodash": "^4.17.4",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "supports-color": "^5.3.0"
   },
   "devDependencies": {
     "@types/handlebars": "^4.0.36",
@@ -61,7 +62,7 @@
     "typescript": "^2.7.1"
   },
   "engines": {
-    "node":"9.2.x",
-    "npm":"5.5.x"
+    "node": "9.2.x",
+    "npm": "5.5.x"
   }
 }
