--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "debug"
             ],
             "port": 9229,
-            ///"env": { "DEBUG": "*" }
+            "env": { "DEBUG": "*" }
         },
         {
             "type": "node",
@@ -27,10 +27,10 @@
             "cwd": "${workspaceRoot}",
             "program": "${workspaceRoot}/example-webeasy/src/index.ts",
             "outFiles": ["${workspaceRoot}/example-webeasy/dist/*.js"],
-            /*"env": {
+            "env": {
                 "DEBUG":"*",
                 "DEBUG_COLORS":"true"
-            }*/
+            }
         },
         {
             "type": "node",
