--- a/webeasy/package.json
+++ b/webeasy/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/client-sessions": "^0.8.0",
+    "@types/socket.io": "^1.4.33",
     "async": "^2.6.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
@@ -32,6 +33,7 @@
     "handlebars": "^4.0.11",
     "lodash": "^4.17.4",
     "request": "^2.83.0",
+    "socket.io": "^2.1.0",
     "supports-color": "^5.3.0"
   },
   "devDependencies": {
