--- a/webeasy/package.json
+++ b/webeasy/package.json
@@ -16,7 +16,9 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/index.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "mocha": "node ./node_modules/mocha/bin/_mocha --recursive ./test/**/*.test.js",
+    "mocha-ts": "$(npm bin)/tsc ./test/*.test.ts"
   },
   "author": "Claudio Traspadini Oliveira",
   "license": "ISC",
@@ -33,17 +35,19 @@
   },
   "devDependencies": {
     "@types/async": "^2.0.45",
+    "@types/chai": "^4.1.3",
     "@types/client-sessions": "^0.8.0",
     "@types/debug": "0.0.30",
     "@types/formidable": "^1.0.30",
     "@types/handlebars": "^4.0.36",
     "@types/jest": "^21.1.8",
     "@types/lodash": "^4.14.91",
+    "@types/mocha": "^5.2.0",
     "@types/node": "^9.4.1",
     "@types/request": "^2.0.9",
     "@types/shelljs": "^0.7.7",
-    "@types/supertest": "^2.0.4",
     "@types/socket.io": "^1.4.33",
+    "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "gulp": "^3.9.1",
